--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
       fail-fast: false
     steps:
       - name: Checkout
@@ -59,6 +59,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
+
+      # See: https://www.youtube.com/watch?v=ZgVhU5qvK1M
+      # for a walkthrough on how to create the workload_identity_provider
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          project_id: rms-node
+          workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
 
       - name: Test with coverage
         run: |
