--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -3,12 +3,12 @@ run-name: Run Tests triggered by ${{ github.ref_type }} ${{ github.ref_name }} o
 
 on:
   workflow_dispatch:
-  # pull_request:
-  #   branches: [ main ]
-  # push:
-  #   branches: [ main ]
-  # schedule:
-  #   - cron: "21 11 * * 0"
+  pull_request:
+    branches: [ main ]
+  push:
+    branches: [ main ]
+  schedule:
+    - cron: "21 11 * * 0"
 
 jobs:
   flake8:
@@ -74,6 +74,10 @@ jobs:
       - name: Test with coverage
         run: |
           coverage run -m pytest
+
+      - name: Print coverage report
+        run: |
+          coverage report -m
 
       - name: Upload coverage report to codecov
         uses: codecov/codecov-action@v5
